# bpm

./: .gitignore  CMakeLists.txt  Makefile  Makefile.3ds  Makefile.gba  Makefile.linuxx64  Makefile.nds  Makefile.windowsx64  README.md  bpm  bpm.mb.elf  bpm.mb.gba  bpm_session_context.md  build.sh
.github/workflows/: c-cpp.yml
include/: gba_helper.h
include/bpm/: audio_engine.h  drums.h  gba_display.h  gba_input.h  kit.h  kit_manager.h  melody.h  parser.h  project_manager.h  sequencer.h  sequencer_defs.h
projects/: test_beat.bpm
src/: audio_engine.cpp  drums.cpp  gba_display.cpp  gba_input.cpp  kit.cpp  kit_manager.cpp  main.c  main.cpp  melody.cpp  parser.cpp  project_manager.cpp  sequencer.cpp
